Removed References to HiveLogging and updated the default logging mechanism (#991)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3578 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Server.LINQDataAccess/3.2/app.config
+++ b/sources/HeuristicLab.Hive.Server.LINQDataAccess/3.2/app.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="HeuristicLab.Hive.Server.LINQDataAccess.Properties.Settings.HeuristicLab_Hive_LinqConnectionString"
-            connectionString="Data Source=SEMTEX-PC;Initial Catalog=HeuristicLab.Hive.Linq;Integrated Security=True"
+            connectionString="Data Source=127.0.0.1;Initial Catalog=HeuristicLab.Hive.Linq;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
