--- a/sources/HeuristicLab.Security.Core/3.2/Properties/Settings.settings
+++ b/sources/HeuristicLab.Security.Core/3.2/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="SecurityServerConnectionString" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">Data Source=127.0.0.1;Initial Catalog=HeuristicLab.Security;Persist Security Info=True;User ID=hive;Password=hive;Pooling=true;MultipleActiveResultSets=true</Value>
+      <Value Profile="(Default)">Data Source=127.0.0.1;Initial Catalog=HeuristicLab.Security;Integrated Security=True;Pooling=true;MultipleActiveResultSets=true</Value>
     </Setting>
   </Settings>
 </SettingsFile>
