--- a/sources/HeuristicLab.Security.Core/3.2/app.config
+++ b/sources/HeuristicLab.Security.Core/3.2/app.config
@@ -9,7 +9,7 @@
     <applicationSettings>
         <HeuristicLab.Security.Core.Properties.Settings>
             <setting name="SecurityServerConnectionString" serializeAs="String">
-                <value>Data Source=127.0.0.1;Initial Catalog=HeuristicLab.Security;Persist Security Info=True;User ID=hive;Password=hive;Pooling=true;MultipleActiveResultSets=true</value>
+                <value>Data Source=127.0.0.1;Initial Catalog=HeuristicLab.Security;Integrated Security=True;Pooling=true;MultipleActiveResultSets=true</value>
             </setting>
         </HeuristicLab.Security.Core.Properties.Settings>
         <HeuristicLab.Security.Core.Properties.Settings1>
