Separated `MultiOperator` into two classes `MultiOperator` and `CheckedMultiOperator`. #992 (CheckedItemList and CheckedItemCollection is necessary)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3591 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Operators.Views/3.3/HeuristicLab.Operators.Views-3.3.csproj
+++ b/sources/HeuristicLab.Operators.Views/3.3/HeuristicLab.Operators.Views-3.3.csproj
@@ -91,6 +91,12 @@
       <DependentUpon>AlgorithmOperatorView.cs</DependentUpon>
     </Compile>
     <None Include="HeuristicLabOperatorsViewsPlugin.cs.frame" />
+    <Compile Include="CheckedMultiOperatorView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CheckedMultiOperatorView.Designer.cs">
+      <DependentUpon>CheckedMultiOperatorView.cs</DependentUpon>
+    </Compile>
     <Compile Include="MultiOperatorView.cs">
       <SubType>UserControl</SubType>
     </Compile>
