added first version of constraints (ticket #996)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3592 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Data/3.3/HeuristicLab.Data-3.3.csproj
+++ b/sources/HeuristicLab.Data/3.3/HeuristicLab.Data-3.3.csproj
@@ -104,6 +104,12 @@
     <Compile Include="BoolValue.cs" />
     <Compile Include="Comparison.cs" />
     <Compile Include="ComparisonType.cs" />
+    <Compile Include="Constraints\ComparisonOperation.cs" />
+    <Compile Include="Constraints\TypeConstraint.cs" />
+    <Compile Include="Constraints\ComparisonConstraint.cs" />
+    <Compile Include="Constraints\Constraint.cs" />
+    <Compile Include="Constraints\EqualityConstraint.cs" />
+    <Compile Include="Constraints\IConstraint.cs" />
     <Compile Include="PercentValue.cs" />
     <Compile Include="DateTimeValue.cs" />
     <Compile Include="DoubleArray.cs" />
