Changed StochasticMultiOperator to StochasticMultiBranch and adapted all operators #997
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3593 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Operators/3.3/HeuristicLab.Operators-3.3.csproj
+++ b/sources/HeuristicLab.Operators/3.3/HeuristicLab.Operators-3.3.csproj
@@ -91,14 +91,15 @@
     <Compile Include="Comparator.cs" />
     <Compile Include="Assigner.cs" />
     <Compile Include="AlgorithmOperator.cs" />
-    <Compile Include="StochasticMultiOperator.cs" />
     <Compile Include="MultiOperator.cs" />
     <Compile Include="Operator.cs" />
     <Compile Include="Placeholder.cs" />
     <Compile Include="IntCounter.cs" />
     <Compile Include="ScopeCleaner.cs" />
     <Compile Include="StochasticBranch.cs" />
-    <Compile Include="StochasticMultiBranch.cs" />
+    <Compile Include="StochasticMultiBranch.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="SubScopesCreator.cs" />
     <Compile Include="SubScopesMixer.cs" />
     <Compile Include="SubScopesProcessor.cs" />
