--- a/sources/HeuristicLab.Operators/3.3/HeuristicLab.Operators-3.3.csproj
+++ b/sources/HeuristicLab.Operators/3.3/HeuristicLab.Operators-3.3.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Comparator.cs" />
     <Compile Include="Assigner.cs" />
     <Compile Include="AlgorithmOperator.cs" />
+    <Compile Include="StochasticMultiBranchOfT.cs" />
     <Compile Include="MultiOperator.cs" />
     <Compile Include="Operator.cs" />
     <Compile Include="Placeholder.cs" />
