Added replacement operators and IReplacer interface #998
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3601 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Optimization/3.3/HeuristicLab.Optimization-3.3.csproj
+++ b/sources/HeuristicLab.Optimization/3.3/HeuristicLab.Optimization-3.3.csproj
@@ -86,7 +86,9 @@
     <None Include="HeuristicLabOptimizationPlugin.cs.frame" />
     <Compile Include="Algorithm.cs" />
     <Compile Include="BatchRun.cs" />
+    <Compile Include="Interfaces\ISingleObjectiveReplacer.cs" />
     <Compile Include="Interfaces\IMigrator.cs" />
+    <Compile Include="Interfaces\IReplacer.cs" />
     <Compile Include="Interfaces\ISubScopesQualityComparator.cs" />
     <Compile Include="Interfaces\IQualityComparator.cs" />
     <Compile Include="Interfaces\ISelfAdaptiveManipulator.cs" />
