--- a/sources/HeuristicLab.Core.Views/3.3/HeuristicLab.Core.Views-3.3.csproj
+++ b/sources/HeuristicLab.Core.Views/3.3/HeuristicLab.Core.Views-3.3.csproj
@@ -104,6 +104,12 @@
     <Compile Include="CheckedItemListView.Designer.cs">
       <DependentUpon>CheckedItemListView.cs</DependentUpon>
     </Compile>
+    <Compile Include="ConstraintCollectionView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ConstraintCollectionView.Designer.cs">
+      <DependentUpon>ConstraintCollectionView.cs</DependentUpon>
+    </Compile>
     <Compile Include="LogView.cs">
       <SubType>UserControl</SubType>
     </Compile>
