Changed plugin manager GUI as suggested by reviewers.  #989 (Implement review comments in plugin infrastructure)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3608 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.PluginInfrastructure/HeuristicLab.PluginInfrastructure.csproj
+++ b/sources/HeuristicLab.PluginInfrastructure/HeuristicLab.PluginInfrastructure.csproj
@@ -334,6 +334,9 @@
     <None Include="Resources\VS2008ImageLibrary_CommonElements_Actions_Remove1.png" />
     <None Include="Resources\show_icons.png" />
     <None Include="Resources\show_details.png" />
+    <None Include="Resources\plugin.png" />
+    <None Include="Resources\plugin_16.png" />
+    <None Include="Resources\Setup_Install.ico" />
     <Content Include="Resources\VS2008ImageLibrary_CommonElements_Objects_Arrow_Down.png" />
     <None Include="Resources\VS2008ImageLibrary_Objects_NetworkConnections.png" />
     <None Include="Resources\VS2008ImageLibrary_Objects_Install1.png" />
