Implemented change requests of reviewers.  #989 (Implement review comments in plugin infrastructure)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3612 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.PluginInfrastructure/app.config
+++ b/sources/HeuristicLab.PluginInfrastructure/app.config
@@ -98,7 +98,7 @@
                 <value>http://servdev.heuristiclab.com/Deployment-3.3/Admin.svc</value>
             </setting>
             <setting name="ShowPluginUploadControls" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
         </HeuristicLab.PluginInfrastructure.Properties.Settings>
     </userSettings>
