--- a/sources/HeuristicLab.Optimization/3.3/HeuristicLab.Optimization-3.3.csproj
+++ b/sources/HeuristicLab.Optimization/3.3/HeuristicLab.Optimization-3.3.csproj
@@ -86,6 +86,10 @@
     <None Include="HeuristicLabOptimizationPlugin.cs.frame" />
     <Compile Include="Algorithm.cs" />
     <Compile Include="BatchRun.cs" />
+    <Compile Include="RunCollectionComparisonConstraint.cs" />
+    <Compile Include="RunCollectionConstraintCollection.cs" />
+    <Compile Include="RunCollectionTypeCompatiblityConstraint.cs" />
+    <Compile Include="RunCollectionEqualityConstraint.cs" />
     <Compile Include="Interfaces\ISingleObjectiveReplacer.cs" />
     <Compile Include="Interfaces\IMigrator.cs" />
     <Compile Include="Interfaces\IReplacer.cs" />
@@ -96,6 +100,7 @@
     <Compile Include="Interfaces\IStrategyParameterManipulator.cs" />
     <Compile Include="Interfaces\IStrategyParameterCreator.cs" />
     <Compile Include="Interfaces\IRun.cs" />
+    <Compile Include="IRunCollectionConstraint.cs" />
     <Compile Include="OptimizerList.cs" />
     <Compile Include="Experiment.cs" />
     <Compile Include="Interfaces\IOptimizer.cs" />
