refactored cloning of constraints (ticket #996)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3617 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Optimization/3.3/HeuristicLab.Optimization-3.3.csproj
+++ b/sources/HeuristicLab.Optimization/3.3/HeuristicLab.Optimization-3.3.csproj
@@ -86,11 +86,11 @@
     <None Include="HeuristicLabOptimizationPlugin.cs.frame" />
     <Compile Include="Algorithm.cs" />
     <Compile Include="BatchRun.cs" />
+    <Compile Include="RunCollectionConstraints\RunCollectionComparisonConstraint.cs" />
+    <Compile Include="RunCollectionConstraints\RunCollectionConstraintCollection.cs" />
+    <Compile Include="RunCollectionConstraints\RunCollectionTypeCompatiblityConstraint.cs" />
+    <Compile Include="RunCollectionConstraints\RunCollectionEqualityConstraint.cs" />
     <Compile Include="Interfaces\IAnalyzer.cs" />
-    <Compile Include="RunCollectionComparisonConstraint.cs" />
-    <Compile Include="RunCollectionConstraintCollection.cs" />
-    <Compile Include="RunCollectionTypeCompatiblityConstraint.cs" />
-    <Compile Include="RunCollectionEqualityConstraint.cs" />
     <Compile Include="Interfaces\ISingleObjectiveReplacer.cs" />
     <Compile Include="Interfaces\IMigrator.cs" />
     <Compile Include="Interfaces\IReplacer.cs" />
