Worked on refactoring of algorithm analysis and tracing (#999)  * added analyzers
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3623 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Analysis/3.3/HeuristicLab.Analysis-3.3.csproj
+++ b/sources/HeuristicLab.Analysis/3.3/HeuristicLab.Analysis-3.3.csproj
@@ -86,6 +86,12 @@
     <None Include="HeuristicLabAnalysisPlugin.cs.frame" />
     <Compile Include="BestAverageWorstQualityCalculator.cs" />
     <Compile Include="BestQualityMemorizer.cs" />
+    <Compile Include="PopulationQualityAnalyzer.cs" />
+    <Compile Include="PopulationValueAnalyzer.cs" />
+    <Compile Include="MinAverageMaxValueCalculator.cs" />
+    <Compile Include="PopulationMinAverageMaxValueAnalyzer.cs" />
+    <Compile Include="SolutionValueAnalyzer.cs" />
+    <Compile Include="SolutionQualityAnalyzer.cs" />
     <Compile Include="MultiAnalyzer.cs" />
     <Compile Include="PopulationBestAverageWorstQualityAnalyzer.cs" />
     <Compile Include="QualityDifferenceCalculator.cs" />
