Added `ReadOnlyCheckedItemCollection` and `ReadOnlyCheckedItemList`  #992 (CheckedItemList and CheckedItemCollection is necessary)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3628 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Core/3.3/HeuristicLab.Core-3.3.csproj
+++ b/sources/HeuristicLab.Core/3.3/HeuristicLab.Core-3.3.csproj
@@ -103,6 +103,10 @@
     <None Include="HeuristicLabCorePlugin.cs.frame" />
     <Compile Include="Collections\CheckedItemCollection.cs" />
     <Compile Include="Collections\CheckedItemList.cs" />
+    <Compile Include="Collections\ReadOnlyCheckedItemCollection.cs" />
+    <Compile Include="Collections\ReadOnlyCheckedItemList.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Collections\ReadOnlyItemDictionary.cs" />
     <Compile Include="Collections\ItemDictionary.cs" />
     <Compile Include="Collections\ReadOnlyKeyedItemCollection.cs" />
