Added best solution analyzer for artificial ant problem.  #999 (Refactor algorithm analysis and tracing)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3631 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Problems.ArtificialAnt/3.3/HeuristicLab.Problems.ArtificialAnt-3.3.csproj
+++ b/sources/HeuristicLab.Problems.ArtificialAnt/3.3/HeuristicLab.Problems.ArtificialAnt-3.3.csproj
@@ -80,11 +80,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Analyzers\IAntTrailPopulationAnalyzer.cs" />
+    <Compile Include="Analyzers\PopulationBestAntTrailAnalyzer.cs" />
     <Compile Include="AntInterpreter.cs" />
-    <Compile Include="BestAntTrailVisualizer.cs" />
-    <Compile Include="BestSymbolicExpressionTreeVisualizer.cs" />
     <Compile Include="HeuristicLabProblemsArtificialAntPlugin.cs" />
-    <Compile Include="IAntTrailVisualizer.cs" />
     <Compile Include="Evaluator.cs" />
     <Compile Include="ArtificialAntExpressionGrammar.cs" />
     <Compile Include="ArtificialAntProblem.cs" />
