Worked on best solution analysis for the TSP (#999)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3634 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Parameters/3.3/HeuristicLab.Parameters-3.3.csproj
+++ b/sources/HeuristicLab.Parameters/3.3/HeuristicLab.Parameters-3.3.csproj
@@ -85,6 +85,7 @@
   <ItemGroup>
     <None Include="HeuristicLabParametersPlugin.cs.frame" />
     <Compile Include="ConstrainedValueParameter.cs" />
+    <Compile Include="SubScopesSubScopesLookupParameter.cs" />
     <Compile Include="OptionalConstrainedValueParameter.cs" />
     <Compile Include="ValueParameter.cs" />
     <Compile Include="LookupParameter.cs" />
