#999  * changes in LS   * counting evaluated moves   * tracking best quality which is needed by the algorithm  * changes in TS   * adapted to analyzer   * added a neighborhood analyzer that shows what percentage of the neighborhood is tabu
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3636 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Algorithms.TabuSearch/3.3/HeuristicLab.Algorithms.TabuSearch-3.3.csproj
+++ b/sources/HeuristicLab.Algorithms.TabuSearch/3.3/HeuristicLab.Algorithms.TabuSearch-3.3.csproj
@@ -85,6 +85,7 @@
     <Compile Include="TabuListCreator.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="TabuNeighborhoodAnalyzer.cs" />
     <Compile Include="TabuSelector.cs">
       <SubType>Code</SubType>
     </Compile>
