Added anaylzers for the onemax problem (#999)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3642 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Problems.OneMax/3.3/HeuristicLab.Problems.OneMax-3.3.csproj
+++ b/sources/HeuristicLab.Problems.OneMax/3.3/HeuristicLab.Problems.OneMax-3.3.csproj
@@ -85,8 +85,13 @@
     <None Include="Properties\AssemblyInfo.frame" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Analyzers\BestOneMaxSolutionAnalyzer.cs" />
+    <Compile Include="Analyzers\MultiPopulationBestOneMaxSolutionAnalyzer.cs" />
+    <Compile Include="Analyzers\PopulationBestOneMaxSolutionAnalyzer.cs" />
+    <Compile Include="Interfaces\IBestOneMaxSolutionAnalyzer.cs" />
     <Compile Include="Interfaces\IOneMaxSolutionsVisualizer.cs" />
     <Compile Include="Interfaces\IOneMaxMoveEvaluator.cs" />
+    <Compile Include="OneMaxSolution.cs" />
     <Compile Include="MoveEvaluators\OneMaxMoveEvaluator.cs" />
     <Compile Include="MoveEvaluators\OneMaxOneBitflipMoveEvaluator.cs" />
     <Compile Include="OneMaxProblem.cs" />
