Worked on refactoring of algorithm analysis and tracing (#999)  * removed !SubScopesSubScopesLookupParameter  * adapted !SubScopesLookupParameter and renamed it into !ScopeTreeLookupParameter
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3659 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Parameters.Views/3.3/HeuristicLab.Parameters.Views-3.3.csproj
+++ b/sources/HeuristicLab.Parameters.Views/3.3/HeuristicLab.Parameters.Views-3.3.csproj
@@ -91,6 +91,12 @@
     <Compile Include="ConstrainedValueParameterView.Designer.cs">
       <DependentUpon>ConstrainedValueParameterView.cs</DependentUpon>
     </Compile>
+    <Compile Include="ScopeTreeLookupParameterView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ScopeTreeLookupParameterView.Designer.cs">
+      <DependentUpon>ScopeTreeLookupParameterView.cs</DependentUpon>
+    </Compile>
     <Compile Include="ValueLookupParameterView.cs">
       <SubType>UserControl</SubType>
     </Compile>
