--- a/sources/HeuristicLab.Problems.TestFunctions/3.3/HeuristicLab.Problems.TestFunctions-3.3.csproj
+++ b/sources/HeuristicLab.Problems.TestFunctions/3.3/HeuristicLab.Problems.TestFunctions-3.3.csproj
@@ -83,9 +83,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Analyzers\BestSingleObjectiveTestFunctionSolutionAnalyzer.cs" />
-    <Compile Include="Analyzers\MultiPopulationBestSingleObjectiveTestFunctionSolutionAnalyzer.cs" />
-    <Compile Include="Analyzers\PopulationBestSingleObjectiveTestFunctionSolutionAnalyzer.cs" />
+    <Compile Include="Analyzers\BestSingleObjectiveTestFunctionSolutionAnalyzer.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Evaluators\AckleyEvaluator.cs" />
     <Compile Include="Evaluators\BealeEvaluator.cs" />
     <Compile Include="Evaluators\BoothEvaluator.cs" />
